Issue 1703 Java 22 constants (#1841)
Umbrella bug created for test failures due to jdk 22 - to be taken up as follow-up